[package]
name = "rocl"
version = "0.0.7"
authors = ["Rodrigo Vaz"]
description = "Rust OSB client library used by rocs generated with openapi-generator"
license = "MIT"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json", "multipart"]

[dev-dependencies]
